restore push oversize

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Be Better Now</string>
+    <string name="app_name">Be Better</string>
+    <string name="slogan">get BETTER now</string>
+    <string name="day">Day:</string>
+    <string name="workouts">  workouts</string>
+
 </resources>
