created Preparatory Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="slogan">get BETTER now</string>
     <string name="day">Day:</string>
     <string name="workouts">  workouts</string>
+    <string name="waiting_message"> get ready </string>
 
 </resources>
