--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="workouts">  workouts</string>
     <string name="waiting_message"> get ready </string>
     <string name="start_button"> start </string>
+    <string name="next_button"> next </string>
 
 </resources>
