--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="waiting_message"> get ready </string>
     <string name="start_button"> start </string>
     <string name="next_button"> next </string>
+    <string name="well_done"> well done</string>
 
 </resources>
