--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="workouts">  workouts</string>
     <string name="waiting_message"> get ready </string>
     <string name="start_button"> start </string>
+    <string name="days"> training days </string>
+    <string name="exercises_list"> your exercises </string>
     <string name="next_button"> next </string>
     <string name="well_done"> well done</string>
 
