--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="attention"> attention</string>
     <string name="reset_days_message"> Do you really want to reset the progress of all training days?</string>
     <string name="reset_day_message"> Do you really want to reset this days workout progress?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
